--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,10 @@ matplotlib==3.5.2
 mxnet==1.9.1
 mxnet_cu102==1.6.0
 numpy==1.18.5
-opencv_python==4.6.0.66
+opencv_python==4.5.1.48
 pandas==1.4.3
 Pillow==9.2.0
 scikit_learn==1.1.1
 scipy==1.4.1
 tqdm==4.64.0
+mediapipe
